--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "express": "3.0.0rc4",
         "jade": "*",
         "nodemon": "*",
-        "mongoose" : "*"
+        "mongoose": "*",
+        "jquery": "~1.8.3"
     },
     "repository": {
         "type": "git",
