--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "jade": "*",
         "nodemon": "*",
         "mongoose": "*",
+        "connect-mongo": "~0.4.0",
         "jquery": "~1.8.3"
     },
     "repository": {
