Updating nginx.conf

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -58,6 +58,10 @@ http {
            #add_header          Cache-Control no-cache;
        }
 
+       location /pics/ {
+           alias     /opt/mark/www/nodejsauthenticationpics/;
+       }
+
        location /services/v1/ {
            proxy_pass          http://nodejsauthentication-services/;
            proxy_pass_header   Server;
