--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
     "author": "Mark Timmermann",
     "version": "0.0.1",
     "scripts": {
-        "start": "nodemon app.js"
+        "start": "node app.js"
     },
     "dependencies": {
         "express": "3.0.0rc4",
-        "jade": "*",
-        "nodemon": "*",
         "mongoose": "*",
         "connect-mongo": "~0.4.0",
         "jquery": "~1.8.3"
