--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "express": "3.0.0rc4",
         "mongoose": "*",
         "connect-mongo": "~0.4.0",
-        "jquery": "~1.8.3"
+        "jquery": "~1.8.3",
+        "winston": "~0.7.2"
     },
     "repository": {
         "type": "git",
