--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
         "mongoose": "*",
         "connect-mongo": "~0.4.0",
         "jquery": "~1.8.3",
-        "winston": "~0.7.2"
+        "winston": "~0.7.2",
+        "winston-mongodb": "~0.4.3"
     },
     "repository": {
         "type": "git",
