Adding mongodb configuration

--- a/config/application.config
+++ b/config/application.config
@@ -1,9 +1,19 @@
 
 module.exports = {
     application: {
-        port: '8003'
+        port: '8003',
+        db: {
+            url: 'mongodb://localhost:27017/nodejsauthapp'
+        }
     },
     logging: {
-        level: 'info'
+        level: 'info',
+        db: {
+            database: 'nodejsauthapp_logs',
+            port: '27017',
+            host: 'localhost'
+        },
+        logFileRolling: 'logs/application.log',
+        logFileExcpetion: 'logs/exceptions.log'
     }  
 };
