--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
     "name": "nodejs.authentication.app",
     "author": "Mark Timmermann",
     "version": "0.0.1",
+    "description": "A Boilerplate for building a restful Node.js services app",
     "scripts": {
         "start": "node app.js"
+    },
+    "engines": {
+        "node": ">=0.10.22",
+        "npm": ">=1.3.4"
     },
     "dependencies": {
         "express": "3.0.0rc4",
