--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     },
     "dependencies": {
         "express": "3.0.0rc4",
-        "mongoose": "~3.8.1",
-        "connect-mongo": "~0.4.0",
-        "jquery": "~1.8.3",
-        "winston": "~0.7.2",
-        "winston-mongodb": "~0.4.3"
+        "mongoose": "3.8.1",
+        "connect-mongo": "0.4.0",
+        "jquery": "1.8.3",
+        "winston": "0.7.2",
+        "winston-mongodb": "0.4.3"
     },
     "repository": {
         "type": "git",
